# try-rust-ffi-callback

./: .gitignore  README.md  call_bindgen
c_code/: Makefile.am  bootstrap  ccode.c  ccode.h  configure.ac
rust_code/: Cargo.toml  build.rs
rust_code/src/: c_interop.rs  ccode.rs  lib.rs  main.rs
