AC_PREREQ([2.69])
AC_INIT([libccode],[1.0],[m@tthias.eu])

AC_CONFIG_SRCDIR([ccode.c])
AC_USE_SYSTEM_EXTENSIONS
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_LANG(C)

dnl Check for programs
AM_PROG_AS
AM_PROG_AR
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
